# Axiom-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: AxiomBuildConfig.hpp.in
haxe/: haxelib.json
haxe/src/axiom/: AxiomHaxe.hx  Engine.hx  EngineConfig.hx  Input.hx  Scene.hx
haxe/src/axiom/script/: AxiomScript.hx  ScriptEvent.hx  ScriptResult.hx
include/axiom/: Engine.hpp  Logger.hpp  Scene.hpp  Scripting.hpp  Time.hpp
src/: main.cpp
src/core/: Engine.cpp  Logger.cpp  Scene.cpp  Time.cpp
src/java/com/axiom/: EngineBootstrap.java
src/platform/: Platform.mm
src/scripting/: Scripting.cpp
web/: game.js  index.html  styles.css
